compiler/testData/diagnostics/tests/annotations/typeAnnotations.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE, -UNUSED_PARAMETER
class A

fun <!UNRESOLVED_REFERENCE!>@x<!> A.foo(a: <!UNRESOLVED_REFERENCE!>@x<!> Int) {
    val v: <!UNRESOLVED_REFERENCE!>@x<!> Int = 1
}